--- a/ChatSDKUI/Interface/BFriendsListViewController.xib
+++ b/ChatSDKUI/Interface/BFriendsListViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -75,17 +75,17 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Ok8-lm-Uad" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="-1" id="283-gg-XOG"/>
+                <constraint firstItem="3eB-zr-9l2" firstAttribute="top" secondItem="Ok8-lm-Uad" secondAttribute="bottom" id="Cn1-Oh-fYT"/>
                 <constraint firstItem="281-dx-DD4" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Msp-Dy-Ks6"/>
                 <constraint firstAttribute="trailing" secondItem="3eB-zr-9l2" secondAttribute="trailing" id="TaF-Ng-9y0"/>
                 <constraint firstItem="Ok8-lm-Uad" firstAttribute="top" secondItem="281-dx-DD4" secondAttribute="bottom" id="UL8-Y6-Tdd"/>
-                <constraint firstItem="3eB-zr-9l2" firstAttribute="top" secondItem="Ok8-lm-Uad" secondAttribute="bottom" id="bLk-iP-8Vs"/>
                 <constraint firstAttribute="trailing" secondItem="Ok8-lm-Uad" secondAttribute="trailing" constant="-1" id="fpp-8a-4rt"/>
                 <constraint firstItem="281-dx-DD4" firstAttribute="top" secondItem="1" secondAttribute="top" priority="900" id="giL-Rv-TKJ"/>
                 <constraint firstAttribute="trailing" secondItem="281-dx-DD4" secondAttribute="trailing" id="nWm-ZW-M7l"/>
                 <constraint firstItem="3eB-zr-9l2" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="qS1-Yx-AL2"/>
                 <constraint firstAttribute="bottom" secondItem="3eB-zr-9l2" secondAttribute="bottom" id="zAS-aa-dRu"/>
             </constraints>
-            <point key="canvasLocation" x="-100.5" y="-91.5"/>
+            <point key="canvasLocation" x="-160.80000000000001" y="-82.3088455772114"/>
         </view>
     </objects>
 </document>
