--- a/ChatSDKUI/Interface/BSearchViewController.xib
+++ b/ChatSDKUI/Interface/BSearchViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,8 +22,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="RHx-Ni-2pY">
-                    <rect key="frame" x="0.0" y="8" width="375" height="659"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="50" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="RHx-Ni-2pY">
+                    <rect key="frame" x="0.0" y="15" width="375" height="652"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="45h-db-2ml"/>
@@ -53,7 +53,7 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="RHx-Ni-2pY" secondAttribute="trailing" id="0bV-YC-sCY"/>
                 <constraint firstItem="JsS-ef-lBV" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="1sa-GS-4vm"/>
-                <constraint firstItem="RHx-Ni-2pY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="8" id="Chu-AS-7GU"/>
+                <constraint firstItem="RHx-Ni-2pY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="15" id="Chu-AS-7GU"/>
                 <constraint firstItem="RHx-Ni-2pY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Ko0-uI-CSG"/>
                 <constraint firstItem="JsS-ef-lBV" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="M98-HU-0Lj"/>
                 <constraint firstAttribute="bottom" secondItem="JsS-ef-lBV" secondAttribute="bottom" id="Osd-Uh-uvN"/>
@@ -61,7 +61,7 @@
                 <constraint firstAttribute="bottom" secondItem="RHx-Ni-2pY" secondAttribute="bottom" priority="750" id="QcP-8Z-724"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-            <point key="canvasLocation" x="83" y="380"/>
+            <point key="canvasLocation" x="132" y="341.37931034482762"/>
         </view>
     </objects>
 </document>
