--- a/ChatSDKUI/Interface/Profile.storyboard
+++ b/ChatSDKUI/Interface/Profile.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="S0e-Qh-Mjd">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="S0e-Qh-Mjd">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,10 +28,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OfV-Y5-yv1">
-                                                    <rect key="frame" x="137.5" y="5" width="100" height="100"/>
+                                                    <rect key="frame" x="147.5" y="15" width="80" height="80"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="100" id="I3e-Oq-Oa5"/>
-                                                        <constraint firstAttribute="width" constant="100" id="d7Z-io-66F"/>
+                                                        <constraint firstAttribute="height" constant="80" id="I3e-Oq-Oa5"/>
+                                                        <constraint firstAttribute="width" constant="80" id="d7Z-io-66F"/>
                                                     </constraints>
                                                     <state key="normal" image="button:OfV-Y5-yv1:image">
                                                         <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -97,9 +96,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fLk-Vs-HfW">
-                                                    <rect key="frame" x="59" y="7" width="296" height="30"/>
+                                                    <rect key="frame" x="59" y="1" width="296" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="Kzf-K5-NpL"/>
+                                                        <constraint firstAttribute="height" constant="42" id="Kzf-K5-NpL"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences" returnKeyType="done"/>
@@ -132,9 +131,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jLn-qd-LKf">
-                                                    <rect key="frame" x="59" y="7" width="296" height="30"/>
+                                                    <rect key="frame" x="59" y="1" width="296" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="0wL-0S-FzW"/>
+                                                        <constraint firstAttribute="height" constant="42" id="0wL-0S-FzW"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" keyboardType="phonePad" returnKeyType="next"/>
@@ -167,9 +166,9 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5rN-rQ-91R">
-                                                    <rect key="frame" x="59" y="7" width="296" height="30"/>
+                                                    <rect key="frame" x="59" y="1" width="296" height="42"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="30" id="BO8-Hu-M48"/>
+                                                        <constraint firstAttribute="height" constant="42" id="BO8-Hu-M48"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="done"/>
@@ -222,7 +221,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pey-Dk-Pyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="642" y="52"/>
+            <point key="canvasLocation" x="1027.2" y="46.776611694152926"/>
         </scene>
     </scenes>
     <resources>
